--- a/location-manager/pom.xml
+++ b/location-manager/pom.xml
@@ -39,6 +39,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>com.github.slugify</groupId>
 			<artifactId>slugify</artifactId>
 			<version>3.0.3</version>
